--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     </section>
 
-    <section class="question section-padding">
+    <section class="question ">
       <div>
         <div class="title-container mb-4" data-aos="fade-up" data-aos-duration="1000">
           <div class="question-title">
