--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
               <span class="text">E</span>
             </div>
             </div>
-            <div class="taglin">
-              <p>We Are The Future</p>
-              </div>
+            
                 <div class="hero-btn d-flex justify-content-center my-5">
                   <button class="cta-btn">Join Us</button>
                 </div>
@@ -130,7 +128,7 @@
         </div>
         <div class="container flip-container" data-aos="zoom-in-up" data-aos-duration="1000" >
           <div class="row" >
-            <div class="col-md-4 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -158,7 +156,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -186,7 +184,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -214,7 +212,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-lg-4 col-md-6 mb-4">
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -242,7 +240,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -270,7 +268,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-4 " >
+            <div class="col-lg-4 col-md-6 mb-4" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
