--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
         <div class="container flip-container" data-aos="zoom-in-up" data-aos-duration="1000" >
           <div class="row" >
-            <div class="col-lg-4 col-md-6 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in-up" data-aos-duration="1000" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -156,7 +156,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in-up" data-aos-duration="1000" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -184,7 +184,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in-up" data-aos-duration="1000">
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -212,7 +212,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
+            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in-up" data-aos-duration="1000">
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -240,7 +240,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in-up" data-aos-duration="1000" >
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -268,7 +268,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4" >
+            <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in-up" data-aos-duration="1000">
               <div class="flip-card" tabindex="0">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
