--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         >
           <ul class="navbar-nav gap-4">
             <li class="nav-item rounded-pill px-4 py-1">
-              <a class="nav-link active hover-me" aria-current="page" href="#"
+              <a class="nav-link active hover-me" aria-current="page" href="#home"
                 ><i class="bi bi-house-fill me-2"></i>Home</a
               >
             </li>
@@ -113,7 +113,7 @@
 
     
  
-    <section class="Journey p-5 mt-5" id="about-us">
+    <section class="Journey pt-5 pb-5 mt-5" id="about-us">
       <div class="title-container mb-4" data-aos="fade-up" data-aos-duration="1000" >
         <div class="question-title">
           <h2 class="question-main-heading text-center">Story Of Our Journey</h2>
@@ -161,7 +161,7 @@
      </div>
     </section>
 
-    <section class="question p-5" id="Features">
+    <section class="question pt-5 pb-5" id="Features">
       <div>
         <div class="title-container mb-4" data-aos="fade-up" data-aos-duration="1000">
           <div class="question-title">
@@ -351,7 +351,7 @@
 
 
 
-    <section class="onboarding p-5 " data-aos="zoom-in-up" data-aos-duration="1000" >
+    <section class="onboarding pt-5 pb-5 " data-aos="zoom-in-up" data-aos-duration="1000" >
       <div class="title-container mb-4" data-aos="fade-up" data-aos-duration="1000" >
         <div class="question-title">
           <h2 class="question-main-heading text-center">Simple 4 Step Onboarding</h2>
