--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
     
  
-    <section class="Journey pt-5 pb-5 mt-5" id="about-us">
+    <section class="Journey pt-5 pb-5" id="about-us">
       <div class="title-container mb-4" data-aos="fade-up" data-aos-duration="1000" >
         <div class="question-title">
-          <h2 class="question-main-heading text-center">Story Of Our Journey</h2>
+          <h2 class="question-main-heading text-center">About Us</h2>
         </div>
         <p class="onboarding-pera mb-0">
           The journey of creating AuctionExt has been an exhilarating ride. It all started with a vision to transform the way online auctions are conducted.
